--- a/example/frontend/Dockerfile
+++ b/example/frontend/Dockerfile
@@ -1,7 +1,15 @@
-FROM node:22
+FROM node:22 as dev
 
 WORKDIR /home/app
 
 COPY ./ ./
 
-CMD node ./index.js
+CMD node dev.js
+
+FROM dev as builder
+
+RUN node build.js
+
+FROM nginx as production
+
+COPY --from=builder /home/app/index.html /usr/share/nginx/html/
