--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,17 @@
 {
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
+    "declaration": true,
+    "module": "Node16",
     "outDir": "dist",
+    "rootDir": "src",
+    "strict": true,
+    "target": "es2022",
+    "moduleResolution": "node16"
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "exclude": ["examples/**/*"],
+  "ts-node": {
+    "esm": true
+  }
 }
