--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "oclif manifest && oclif readme",
-    "test": "mocha --forbid-only \"test/**/*.test.ts\"",
+    "test": "mocha --forbid-only \"tests/**/*.spec.ts\"",
     "version": "oclif readme && git add README.md"
   },
   "dependencies": {
@@ -44,6 +44,8 @@
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "mocha": "^11.7.1",
+    "chai": "^5.2.1",
     "oclif": "^4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
