--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "rootDir": "src",
     "strict": true,
     "target": "es2022",
-    "moduleResolution": "node16"
+    "moduleResolution": "node16",
+    "resolveJsonModule": true
   },
   "include": ["src/**/*"],
   "exclude": ["examples/**/*"],
