--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,12 @@
   "extends": "@tsconfig/node20/tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "module": "Node16",
+    "module": "nodenext",
     "outDir": "dist",
     "rootDir": "src",
     "strict": true,
-    "target": "es2022",
-    "moduleResolution": "node16",
+    "target": "esnext",
+    "moduleResolution": "nodenext",
     "resolveJsonModule": true
   },
   "include": ["src/**/*"],
