--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "oclif manifest && oclif readme",
-    "test": "vitest",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "version": "oclif readme && git add README.md"
   },
   "dependencies": {
