--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@oclif/plugin-autocomplete": "^3.2.34",
     "@oclif/plugin-help": "^6.2.32",
     "@oclif/plugin-plugins": "^5.4.46",
+    "@oclif/plugin-not-found": "^3.2.63",
     "ajv": "^8.17.1",
     "dockerode": "^4.0.7",
     "find-up": "^7.0.0",
@@ -44,10 +45,10 @@
     "@types/node": "^24.2.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
-    "eslint": "^9.32.0",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
+    "eslint": "^9.32.0",
     "oclif": "^4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
@@ -74,6 +75,7 @@
     "plugins": [
       "@oclif/plugin-help",
       "@oclif/plugin-autocomplete",
+      "@oclif/plugin-not-found",
       "@oclif/plugin-plugins"
     ],
     "topicSeparator": " ",
