--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "scripts": {
     "build": "rimraf dist && tsc -b && cp -r src/docker/protobuf/*.proto dist/docker/protobuf/",
     "lint": "eslint",
+    "pack": "oclif pack macos",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "oclif manifest && oclif readme",
@@ -54,6 +55,7 @@
     "oclif": "^4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
+    "shx": "^0.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
@@ -73,6 +75,9 @@
     "commands": "./dist/cli/commands",
     "hooks": {
       "init": "./dist/cli/hooks/init"
+    },
+    "macos": {
+      "identifier": "dev.enspirit.emb"
     },
     "plugins": [
       "@oclif/plugin-help",
