Fix 'emb run' skeleton.

--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-
+    "test": "npm run cowsay"
   },
   "dependencies": {
     "cowsay": "^1.6.0"
