Some beautiful tables.

--- a/package.json
+++ b/package.json
@@ -28,14 +28,16 @@
     "@oclif/core": "^4.5.2",
     "@oclif/plugin-autocomplete": "^3.2.34",
     "@oclif/plugin-help": "^6.2.32",
-    "@oclif/plugin-plugins": "^5.4.46",
     "@oclif/plugin-not-found": "^3.2.63",
+    "@oclif/plugin-plugins": "^5.4.46",
+    "@oclif/table": "^0.4.12",
     "ajv": "^8.17.1",
     "dockerode": "^4.0.7",
     "dotenv": "^17.2.1",
     "find-up": "^7.0.0",
     "glob": "^11.0.3",
     "listr2": "^9.0.1",
+    "luxon": "^3.7.1",
     "protobufjs": "^7.5.3",
     "simple-git": "^3.28.0",
     "yaml": "^2.8.1"
@@ -48,6 +50,7 @@
     "@oclif/test": "^4",
     "@tsconfig/node20": "^20.1.6",
     "@types/dockerode": "^3.3.42",
+    "@types/luxon": "^3.7.1",
     "@types/node": "^24.2.0",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
