Pack macos/deb packages.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "build:ts": "tsc -b",
     "build:types": "json2ts src/config/schema.json > src/config/schema.ts",
     "lint": "eslint",
-    "pack": "oclif pack macos",
+    "pack": "npm run pack:macos && npm run pack:deb",
+    "pack:macos": "oclif pack macos",
+    "pack:deb": "oclif pack deb",
     "postpack": "shx rm -f oclif.manifest.json",
     "posttest": "npm run lint",
     "prepack": "oclif manifest && oclif readme",
