Support for inter-component dependencies.

--- a/.emb.yml
+++ b/.emb.yml
@@ -17,7 +17,9 @@ components:
   - simple
   - frontend
   # On purpose putting dependent before base
-  - dependent
+  - name: dependent
+    dependencies:
+      - base
   - base
   - name: buildargs
     buildArgs:
