--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.2.1",
     "find-up": "^7.0.0",
     "glob": "^11.0.3",
+    "graphlib": "^2.1.8",
     "listr2": "^9.0.1",
     "luxon": "^3.7.1",
     "protobufjs": "^7.5.3",
@@ -54,6 +55,7 @@
     "@types/dockerode": "^3.3.42",
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.2.0",
+    "@types/graphlib": "^2.1.12",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
     "eslint-config-oclif": "^6",
