--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@oclif/table": "^0.4.12",
     "ajv": "^8.17.1",
     "dockerode": "^4.0.7",
+    "docker-compose": "^1.2.0",
     "dotenv": "^17.2.1",
     "find-up": "^7.0.0",
     "glob": "^11.0.3",
