--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node dev.js"
+    "start": "node dev.js",
+    "test": "node --test && echo Ran successfully on $HOSTNAME"
   },
   "dependencies": {
   },
