Fix aliases after build.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "rimraf dist && npm run build:types && npm run build:ts && npm run copy:proto",
     "copy:proto": "cp -r src/docker/protobuf/*.proto dist/src/docker/protobuf/",
-    "build:ts": "tsc -b",
+    "build:ts": "tsc -b && tsc-alias",
     "build:types": "json2ts src/config/schema.json > src/config/schema.ts",
     "lint": "eslint",
     "pack": "npm run pack:macos && npm run pack:deb",
@@ -36,8 +36,8 @@
     "@oclif/plugin-plugins": "^5.4.46",
     "@oclif/table": "^0.4.12",
     "ajv": "^8.17.1",
-    "dockerode": "^4.0.7",
     "docker-compose": "^1.2.0",
+    "dockerode": "^4.0.7",
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
     "find-up": "^7.0.0",
@@ -57,21 +57,22 @@
     "@oclif/test": "^4",
     "@tsconfig/node20": "^20.1.6",
     "@types/dockerode": "^3.3.42",
+    "@types/graphlib": "^2.1.12",
     "@types/luxon": "^3.7.1",
     "@types/node": "^24.2.0",
-    "@types/graphlib": "^2.1.12",
     "@typescript-eslint/eslint-plugin": "^8.39.0",
     "@typescript-eslint/parser": "^8.39.0",
+    "eslint": "^9.32.0",
     "eslint-config-oclif": "^6",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
-    "eslint": "^9.32.0",
     "json-schema-to-typescript": "^15.0.4",
     "oclif": "^4",
     "prettier": "^3.6.2",
     "rimraf": "^6.0.1",
     "shx": "^0.4.0",
     "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
