--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node dev.js",
-    "test": "node --test && echo Ran successfully on $HOSTNAME"
+    "test": "node --test && echo Ran successfully on $HOSTNAME",
+    "fail": "fail"
   },
   "dependencies": {
   },
