'emb config print' gives yaml by default.

--- a/examples/frontend/package.json
+++ b/examples/frontend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node dev.js",
     "test": "node --test && echo Ran successfully on $HOSTNAME",
+    "greet": "echo Hello $GREET",
     "fail": "fail"
   },
   "dependencies": {
