First implementation of file (mTime) based prereqs logic.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "listr2": "^9.0.1",
     "luxon": "^3.7.1",
     "protobufjs": "^7.5.3",
+    "p-map": "^7.0.3",
     "simple-git": "^3.28.0",
     "yaml": "^2.8.1"
   },
