--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build:ts": "tsc -b && tsc-alias",
     "build:types": "json2ts src/config/schema.json > src/config/schema.ts",
     "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "pack": "npm run pack:macos && npm run pack:deb",
     "pack:macos": "oclif pack macos",
     "pack:deb": "oclif pack deb",
@@ -49,7 +50,8 @@
     "protobufjs": "^7.5.3",
     "p-map": "^7.0.3",
     "simple-git": "^3.28.0",
-    "yaml": "^2.8.1"
+    "yaml": "^2.8.1",
+    "zod": "^4.0.16"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -77,7 +79,8 @@
     "tsc-alias": "^1.8.16",
     "tsx": "^4.20.3",
     "typescript": "^5.9.2",
-    "vitest": "^3.2.4"
+    "vitest": "^3.2.4",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "engines": {
     "node": ">=20.0.0"
