--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     "resolveJsonModule": true,
     "baseUrl": "./",
     "paths": {
+      "@": ["./src/index.js"],
+      "@/*": ["./src/*"],
       "@/cli": ["./src/cli/index.js"],
       "@/cli/*": ["./src/cli/*"],
       "@/prerequisites": ["./src/prerequisites/index.js"],
@@ -18,6 +20,8 @@
       "@/config/*": ["./src/config/*"],
       "@/monorepo": ["./src/monorepo/index.js"],
       "@/monorepo/*": ["./src/monorepo/*"],
+      "@/operations": ["./src/operations/index.js"],
+      "@/operations/*": ["./src/operations/*"],
       "@/docker": ["./src/docker/index.js"],
       "@/docker/*": ["./src/docker/*"],
       "@/utils": ["./src/utils/index.js"],
