--- a/.emb.yml
+++ b/.emb.yml
@@ -5,15 +5,17 @@ project:
 
 ## Plugins configs
 plugins:
+  # Auto-discover components (default: folders with */Dockerfile)
   - name: autodiscover
-    config:
-      ignore:
-        - base/Dockerfile
 
+  # Load some .env files
   - name: dotenv
     config:
       - .env
       - .env.commons
+
+  # Load components' Embfiles
+  - name: embfiles
 
 ## Add variables to the environment
 env:
@@ -36,43 +38,7 @@ components:
   # This component will assume:
   # - the folder 'simple/' exists
   # - the Dockerfile 'simple/Dockerfile' exists
-  - simple
-
-  # Exact same as for 'simple', but a tiny bit more verbose
-  - name: base
-
-  # We can override things
-  - name: frontend
-    # Such as the docker target to use for the build
-    target: development
-    # And we can define tasks
-    tasks:
-      - name: test
-        description: 'A simple unit test task'
-        script: | # shell
-          npm run test
-      - name: fail
-        description: 'A task that will fail'
-        script: | # shell
-          npm run fail
-
-  # As part of things we can do for the build
-  # we can pass build args to the docker build
-  - name: buildargs
-    buildArgs:
-      # Inject some env var as build arg
-      GREETING: Hello ${env:USER}
-
-  # Sometimes we have inter-components dependencies
-  # (for instance when reusing images)
-  # This ensures that 'base' is built before 'dependent'
-  #
-  # (FYI: EMB will check and fail if it detects circular dependencies)
-  - name: dependent
-    dependencies:
-      - base
-    buildArgs:
-      BASE_IMAGE: emb/base:${env:DOCKER_TAG}
+  - name: simple
 
 ## Flavours
 flavors:
