--- a/examples/buildargs/Embfile.yml
+++ b/examples/buildargs/Embfile.yml
@@ -1,5 +1,7 @@
+# yaml-language-server: $schema=../../src/config/schema.json#/$defs/component
 name: buildargs
 
-buildArgs:
-  # Inject some env var as build arg
-  GREETING: Hello ${env:USER}
+docker:
+  buildArgs:
+    # Inject some env var as build arg
+    GREETING: Hello ${env:USER}
