--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build:ts": "tsc -b && tsc-alias",
     "build:ts:watch": "tsc --watch",
     "build:types": "json2ts src/config/schema.json > src/config/schema.ts",
+    "build:docs": "node --experimental-strip-types scripts/docs-execs.ts",
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "pack": "npm run pack:macos && npm run pack:deb",
@@ -89,6 +90,9 @@
     "json-schema-to-typescript": "^15.0.4",
     "oclif": "^4",
     "prettier": "^3.6.2",
+    "remark-parse": "^11.0.0",
+    "remark-stringify": "^11.0.0",
+    "unified": "^11.0.5",
     "rimraf": "^6.0.1",
     "shx": "^0.4.0",
     "ts-node": "^10.9.2",
