--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,17 +49,21 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     needs: build  # keep stage order similar to GitLab (build -> test)
+    services:
+      docker:
+        image: docker:dind
+        options: --privileged --shm-size=2g
+        volumes:
+          - /var/run/docker.sock:/var/run/docker.sock:ro
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '22.x'
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
+      - name: Test Docker
+        run: |
+          docker version
+          docker info
 
       - name: Show versions
         run: |
@@ -69,5 +73,11 @@ jobs:
       - name: Install deps
         run: npm ci
 
-      - name: Run tests
-        run: npm run test
+      - name: Build
+        run: npm run build
+
+      - name: Run unit tests
+        run: npm run test:unit
+
+      - name: Run integration tests
+        run: npm run test:integration
