--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "dotenv": "^17.2.1",
     "execa": "^9.6.0",
     "fast-json-patch": "^3.1.1",
+    "fdir": "^6.4.6",
     "find-up": "^7.0.0",
     "glob": "^11.0.3",
     "graphlib": "^2.1.8",
