Improve validation schema for config files.

--- a/examples/frontend/Embfile.yml
+++ b/examples/frontend/Embfile.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../src/config/schema.json#/$defs/ComponentConfig
+# yaml-language-server: $schema=../../src/config/schema.json#/definitions/ComponentConfig
 # Override the default docker target
 resources:
   image:
