--- a/examples/simple/Embfile.yml
+++ b/examples/simple/Embfile.yml
@@ -1,1 +1,1 @@
-# yaml-language-server: $schema=../../src/config/schema.json#/$defs/ComponentConfig
+# yaml-language-server: $schema=../../src/config/schema.json#/definitions/ComponentConfig
