--- a/examples/buildargs/Embfile.yml
+++ b/examples/buildargs/Embfile.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../src/config/schema.json#/$defs/ComponentConfig
+# yaml-language-server: $schema=../../src/config/schema.json#/definitions/ComponentConfig
 resources:
   image:
     type: docker/image
