--- a/examples/dependent/Embfile.yml
+++ b/examples/dependent/Embfile.yml
@@ -1,4 +1,4 @@
-# yaml-language-server: $schema=../../src/config/schema.json#/$defs/ComponentConfig
+# yaml-language-server: $schema=../../src/config/schema.json#/definitions/ComponentConfig
 #
 # Sometimes we have inter-components dependencies
 # (for instance when reusing images)
